# tick

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpp.cpp  format_time.txt
All_file_names/: All_file_names.cpp  All_file_names.hpp
Conditional_Argument/: conditional_argument.cpp  conditional_argument.hpp
File_Checking_Process/: file_checking_process.cpp  file_checking_process.hpp
File_Operations/: file_operations.cpp  file_operations.hpp
Program_boot/: program_boot.cpp  program_boot.hpp
Utility/DEFAULT_PATH_UTILITY/: DEFAULT_PATH.cpp  DEFAULT_PATH.hpp
Utility/LOAT_Utility/: LOAT.cpp
Utility/RCFV_Utility/: RCFV_Utility.hpp
Utility/RMR_Utility/: RMR.cpp  RMR.hpp
Write_TT/: write_tt.cpp  write_tt.hpp
docs/tick-v1.0.0-docs/: tick v1.0.0.md
docs/tick-v2.0.0-docs/: tick v2.0.0.md
src/: cpp.cpp
src/All_file_names/: All_file_names.cpp
src/Conditional_Argument/: conditional_argument.cpp  conditional_argument.hpp
src/File_Checking_Process/: file_checking_process.cpp  file_checking_process.hpp
src/File_Operations/: file_operations.cpp  file_operations.hpp
src/Program_boot/: program_boot.cpp
src/Write_TT/: write_tt.cpp  write_tt.hpp
test/Stress_Testing/: Stress_Testing.md
test/Utility_function_tests/: README.md  README_utility_function_tests.md  Utility_function_tests.md  test_Default_path_utility.cpp  test_RCFV_utility.cpp  test_RMR_utility.cpp  test_Remove_Slash_utility.cpp  test_dir_permission_checker_utility.cpp  test_exists_pk_utility.cpp  test_print_timer_utility.cpp
test/file_operation_tests/: README.md  file_operation_tests.md  (+3 more)
(+48 files in other folders)
